--- a/package.json
+++ b/package.json
@@ -1,35 +1,54 @@
 {
-  "name": "@escapace/typescript-library-starter",
+  "name": "@escapace/willow",
   "description": "",
   "version": "0.0.0",
   "author": {
     "name": "escapace",
     "email": "opensource@escapace.com"
   },
-  "bugs": "https://github.com/escapace/typescript-library-starter/issues",
+  "bin": {
+    "willow": "./lib/esm/cli.mjs"
+  },
+  "bugs": "https://github.com/escapace/willow/issues",
+  "dependencies": {
+    "@escapace/sequentialize": "^2.1.4",
+    "@pnpm/read-package-json": "^8.0.4",
+    "@types/lodash-es": "^4.17.9",
+    "@types/semver": "^7.5.3",
+    "@types/split2": "^4.2.1",
+    "@types/uuid": "^9.0.5",
+    "archiver": "^6.0.1",
+    "builtin-modules": "^3.3.0",
+    "chalk": "^5.3.0",
+    "esbuild": "^0.19.5",
+    "execa": "^8.0.1",
+    "fs-extra": "^11.1.1",
+    "lodash-es": "^4.17.21",
+    "split2": "^4.2.0",
+    "temp-dir": "^3.0.0",
+    "uuid": "^9.0.1"
+  },
   "devDependencies": {
-    "@commitlint/cli": "17.7.2",
-    "@commitlint/config-conventional": "17.7.0",
-    "@ls-lint/ls-lint": "2.1.0",
-    "@types/chai": "4.3.6",
+    "@commitlint/cli": "17.8.0",
+    "@commitlint/config-conventional": "17.8.0",
+    "@ls-lint/ls-lint": "2.2.1",
+    "@types/archiver": "5.3.3",
+    "@types/chai": "4.3.8",
     "@types/mocha": "10.0.2",
-    "@types/node": "20.8.3",
-    "@typescript-eslint/eslint-plugin": "6.7.4",
-    "@typescript-eslint/parser": "6.7.4",
+    "@types/node": "20.8.6",
+    "@typescript-eslint/eslint-plugin": "6.8.0",
+    "@typescript-eslint/parser": "6.8.0",
     "c8": "8.0.1",
     "chai": "4.3.10",
-    "esbuild": "0.19.4",
     "eslint": "8.51.0",
     "eslint-config-escapace": "3.18.2",
     "eslint-config-prettier": "9.0.0",
     "eslint-plugin-editorconfig": "4.0.3",
     "eslint-plugin-no-null": "1.0.2",
-    "execa": "8.0.1",
     "fast-glob": "3.3.1",
-    "fs-extra": "11.1.1",
     "husky": "8.0.3",
     "is-ci": "3.0.1",
-    "lint-staged": "14.0.1",
+    "lint-staged": "15.0.1",
     "mocha": "10.2.0",
     "prettier": "3.0.3",
     "prettier-config-escapace": "1.0.6",
@@ -39,7 +58,7 @@
   },
   "engines": {
     "node": ">=18.18.0",
-    "pnpm": ">=8.7.6"
+    "pnpm": ">=8.9.2"
   },
   "exports": {
     ".": {
@@ -51,14 +70,14 @@
     "lib/esm",
     "lib/types"
   ],
-  "homepage": "https://github.com/escapace/typescript-library-starter",
+  "homepage": "https://github.com/escapace/willow",
   "license": "MPL-2.0",
   "module": "lib/esm/index.mjs",
   "private": false,
   "publishConfig": {
     "provenance": true
   },
-  "repository": "escapace/typescript-library-starter",
+  "repository": "escapace/willow",
   "scripts": {
     "build": "node ./scripts/build.mjs",
     "lint": "ls-lint && eslint 'src/**/*.{js,mjs,cjs,ts,mts,cts}'",
