--- a/package.json
+++ b/package.json
@@ -13,10 +13,6 @@
   "dependencies": {
     "@escapace/sequentialize": "^2.1.4",
     "@pnpm/read-package-json": "^8.0.4",
-    "@types/lodash-es": "^4.17.9",
-    "@types/semver": "^7.5.3",
-    "@types/split2": "^4.2.1",
-    "@types/uuid": "^9.0.5",
     "archiver": "^6.0.1",
     "builtin-modules": "^3.3.0",
     "chalk": "^5.3.0",
@@ -34,8 +30,13 @@
     "@ls-lint/ls-lint": "2.2.1",
     "@types/archiver": "5.3.3",
     "@types/chai": "4.3.8",
+    "@types/fs-extra": "11.0.2",
+    "@types/lodash-es": "4.17.9",
     "@types/mocha": "10.0.2",
     "@types/node": "20.8.6",
+    "@types/semver": "7.5.3",
+    "@types/split2": "4.2.1",
+    "@types/uuid": "9.0.5",
     "@typescript-eslint/eslint-plugin": "6.8.0",
     "@typescript-eslint/parser": "6.8.0",
     "c8": "8.0.1",
