--- a/package.json
+++ b/package.json
@@ -11,59 +11,59 @@
   },
   "bugs": "https://github.com/escapace/willow/issues",
   "dependencies": {
-    "@pnpm/read-package-json": "^8.0.4",
+    "@pnpm/read-package-json": "^8.0.7",
     "archiver": "^6.0.1",
     "builtin-modules": "^3.3.0",
     "chalk": "^5.3.0",
-    "esbuild": "^0.19.5",
+    "esbuild": "^0.20.1",
     "execa": "^8.0.1",
-    "fs-extra": "^11.1.1",
+    "fs-extra": "^11.2.0",
     "lodash-es": "^4.17.21",
     "split2": "^4.2.0",
     "temp-dir": "^3.0.0",
     "uuid": "^9.0.1"
   },
   "devDependencies": {
-    "@commitlint/cli": "17.8.0",
-    "@commitlint/config-conventional": "17.8.0",
-    "@ls-lint/ls-lint": "2.2.1",
-    "@types/archiver": "5.3.3",
-    "@types/chai": "4.3.8",
-    "@types/fs-extra": "11.0.2",
-    "@types/lodash-es": "4.17.9",
-    "@types/mocha": "10.0.2",
-    "@types/node": "20.8.6",
-    "@types/semver": "7.5.3",
-    "@types/split2": "4.2.1",
-    "@types/uuid": "9.0.5",
-    "@typescript-eslint/eslint-plugin": "6.8.0",
-    "@typescript-eslint/parser": "6.8.0",
-    "c8": "8.0.1",
-    "chai": "4.3.10",
-    "eslint": "8.51.0",
-    "eslint-config-escapace": "3.18.2",
-    "eslint-config-prettier": "9.0.0",
+    "@commitlint/cli": "18.6.1",
+    "@commitlint/config-conventional": "18.6.2",
+    "@ls-lint/ls-lint": "2.2.2",
+    "@types/archiver": "6.0.2",
+    "@types/chai": "4.3.11",
+    "@types/fs-extra": "11.0.4",
+    "@types/lodash-es": "4.17.12",
+    "@types/mocha": "10.0.6",
+    "@types/node": "20.11.19",
+    "@types/semver": "7.5.7",
+    "@types/split2": "4.2.3",
+    "@types/uuid": "9.0.8",
+    "@typescript-eslint/eslint-plugin": "7.0.2",
+    "@typescript-eslint/parser": "7.0.2",
+    "c8": "9.1.0",
+    "chai": "5.1.0",
+    "eslint": "8.56.0",
+    "eslint-config-escapace": "3.19.0",
+    "eslint-config-prettier": "9.1.0",
     "eslint-plugin-editorconfig": "4.0.3",
     "eslint-plugin-no-null": "1.0.2",
-    "fast-glob": "3.3.1",
-    "husky": "8.0.3",
+    "fast-glob": "3.3.2",
+    "husky": "9.0.11",
     "is-ci": "3.0.1",
-    "lint-staged": "15.0.1",
-    "mocha": "10.2.0",
-    "prettier": "3.0.3",
+    "lint-staged": "15.2.2",
+    "mocha": "10.3.0",
+    "prettier": "3.2.5",
     "prettier-config-escapace": "1.0.6",
-    "semver": "7.5.4",
-    "syncpack": "11.2.1",
-    "typescript": "5.2.2"
+    "semver": "7.6.0",
+    "syncpack": "12.3.0",
+    "typescript": "5.3.3"
   },
   "engines": {
-    "node": ">=18.18.0",
-    "pnpm": ">=8.9.2"
+    "node": ">=20.11.1",
+    "pnpm": ">=8.15.1"
   },
   "exports": {
     ".": {
-      "import": "./lib/esm/index.mjs",
-      "types": "./lib/types/index.d.ts"
+      "types": "./lib/types/index.d.ts",
+      "import": "./lib/esm/index.mjs"
     }
   },
   "files": [
