--- a/package.json
+++ b/package.json
@@ -26,8 +26,6 @@
   "devDependencies": {
     "@commitlint/cli": "19.2.1",
     "@commitlint/config-conventional": "19.1.0",
-    "@eslint/eslintrc": "3.0.2",
-    "@eslint/js": "8.57.0",
     "@ls-lint/ls-lint": "2.2.3",
     "@types/archiver": "6.0.2",
     "@types/chai": "4.3.14",
@@ -40,9 +38,8 @@
     "@types/uuid": "9.0.8",
     "c8": "9.1.0",
     "chai": "5.1.0",
-    "eslint": "8.57.0",
-    "eslint-config-escapace": "4.0.1",
-    "eslint-config-prettier": "9.1.0",
+    "eslint": "9.0.0",
+    "eslint-config-escapace": "4.1.6",
     "fast-glob": "3.3.2",
     "globals": "15.0.0",
     "husky": "9.0.11",
@@ -53,8 +50,7 @@
     "prettier-config-escapace": "1.0.6",
     "semver": "7.6.0",
     "syncpack": "12.3.0",
-    "typescript": "5.4.3",
-    "typescript-eslint": "7.6.0"
+    "typescript": "5.4.3"
   },
   "engines": {
     "node": ">=20.12.0",
