--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   },
   "bugs": "https://github.com/escapace/willow/issues",
   "dependencies": {
-    "@pnpm/read-package-json": "^8.0.8",
+    "@pnpm/read-package-json": "^9.0.0",
     "archiver": "^7.0.1",
     "builtin-modules": "^3.3.0",
     "chalk": "^5.3.0",
@@ -19,42 +19,37 @@
     "execa": "^8.0.1",
     "fs-extra": "^11.2.0",
     "lodash-es": "^4.17.21",
+    "semver": "^7.6.0",
     "split2": "^4.2.0",
     "temp-dir": "^3.0.0",
     "uuid": "^9.0.1"
   },
   "devDependencies": {
-    "@commitlint/cli": "19.2.1",
-    "@commitlint/config-conventional": "19.1.0",
+    "@commitlint/cli": "19.3.0",
+    "@commitlint/config-conventional": "19.2.2",
+    "@escapace/pnpm-pack": "0.2.0",
     "@ls-lint/ls-lint": "2.2.3",
     "@types/archiver": "6.0.2",
-    "@types/chai": "4.3.14",
     "@types/fs-extra": "11.0.4",
     "@types/lodash-es": "4.17.12",
-    "@types/mocha": "10.0.6",
-    "@types/node": "20.12.2",
     "@types/semver": "7.5.8",
     "@types/split2": "4.2.3",
     "@types/uuid": "9.0.8",
-    "c8": "9.1.0",
-    "chai": "5.1.0",
-    "eslint": "9.0.0",
-    "eslint-config-escapace": "4.1.6",
-    "fast-glob": "3.3.2",
-    "globals": "15.0.0",
-    "husky": "9.0.11",
-    "is-ci": "3.0.1",
-    "lint-staged": "15.2.2",
-    "mocha": "10.4.0",
+    "@vitest/coverage-v8": "1.5.2",
+    "eslint": "9.1.1",
+    "eslint-config-escapace": "5.0.6",
+    "knip": "5.11.0",
+    "lefthook": "1.6.10",
     "prettier": "3.2.5",
-    "prettier-config-escapace": "1.0.6",
-    "semver": "7.6.0",
-    "syncpack": "12.3.0",
-    "typescript": "5.4.3"
+    "prettier-config-escapace": "1.2.0",
+    "syncpack": "12.3.2",
+    "tsup": "8.0.2",
+    "typescript": "5.4.5",
+    "vitest": "1.5.2"
   },
   "engines": {
     "node": ">=20.12.0",
-    "pnpm": ">=8.15.6"
+    "pnpm": ">=9.0.6"
   },
   "exports": {
     ".": {
@@ -71,15 +66,16 @@
   "module": "lib/esm/index.mjs",
   "private": false,
   "publishConfig": {
+    "access": "public",
     "provenance": true
   },
   "repository": "escapace/willow",
   "scripts": {
-    "build": "node ./scripts/build.mjs",
-    "lint": "ls-lint && eslint 'src/**/*.{js,mjs,cjs,ts,mts,cts}'",
-    "prepare": "is-ci || husky",
-    "test": "echo ok",
-    "test:mocha": "node ./scripts/test.mjs && c8 mocha --enable-source-maps 'lib/tests/**/*.spec.js'",
+    "build": "tsup",
+    "lint": "ls-lint --config .ls-lint.yaml && knip && eslint",
+    "pack": "pnpm-pack package --pack-destination lib",
+    "prepare": "lefthook install",
+    "test": "vitest --no-watch --coverage",
     "typecheck": "tsc --noEmit"
   },
   "sideEffects": false,
