--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
   "devDependencies": {
     "@commitlint/cli": "19.3.0",
     "@commitlint/config-conventional": "19.2.2",
-    "@escapace/pnpm-pack": "0.2.0",
+    "@escapace/pnpm-pack": "0.4.1",
     "@ls-lint/ls-lint": "2.2.3",
     "@types/archiver": "6.0.2",
     "@types/fs-extra": "11.0.4",
@@ -38,9 +38,9 @@
     "@types/uuid": "9.0.8",
     "@vitest/coverage-v8": "1.5.2",
     "eslint": "9.1.1",
-    "eslint-config-escapace": "5.0.9",
-    "esroll": "0.1.0",
-    "knip": "5.11.0",
+    "eslint-config-escapace": "5.0.12",
+    "esroll": "0.1.1",
+    "knip": "5.13.0",
     "lefthook": "1.6.10",
     "prettier": "3.2.5",
     "prettier-config-escapace": "1.2.0",
@@ -74,6 +74,7 @@
   "repository": "escapace/willow",
   "scripts": {
     "build": "tsx scripts/build.ts",
+    "format": "eslint --no-warn-ignored --fix && prettier -uw .",
     "lint": "ls-lint --config .ls-lint.yaml && knip && eslint",
     "pack": "pnpm-pack package --pack-destination lib",
     "prepare": "lefthook install",
