--- a/package.json
+++ b/package.json
@@ -11,47 +11,47 @@
   },
   "bugs": "https://github.com/escapace/willow/issues",
   "dependencies": {
-    "@pnpm/read-package-json": "^9.0.0",
+    "@pnpm/read-package-json": "^9.0.3",
     "archiver": "^7.0.1",
-    "builtin-modules": "^3.3.0",
+    "builtin-modules": "^4.0.0",
     "chalk": "^5.3.0",
-    "esbuild": "^0.20.2",
-    "execa": "^8.0.1",
+    "esbuild": "^0.23.0",
+    "execa": "^9.3.0",
     "fs-extra": "^11.2.0",
     "lodash-es": "^4.17.21",
-    "semver": "^7.6.0",
+    "semver": "^7.6.2",
     "split2": "^4.2.0",
     "temp-dir": "^3.0.0",
-    "uuid": "^9.0.1"
+    "uuid": "^10.0.0"
   },
   "devDependencies": {
     "@commitlint/cli": "19.3.0",
     "@commitlint/config-conventional": "19.2.2",
-    "@escapace/pnpm-pack": "0.5.0",
+    "@escapace/pnpm-pack": "0.5.2",
     "@ls-lint/ls-lint": "2.2.3",
     "@types/archiver": "6.0.2",
     "@types/fs-extra": "11.0.4",
     "@types/lodash-es": "4.17.12",
-    "@types/node": "20.12.8",
+    "@types/node": "20.14.9",
     "@types/semver": "7.5.8",
     "@types/split2": "4.2.3",
-    "@types/uuid": "9.0.8",
-    "@vitest/coverage-v8": "1.5.2",
-    "eslint": "9.1.1",
-    "eslint-config-escapace": "5.1.2",
+    "@types/uuid": "10.0.0",
+    "@vitest/coverage-v8": "1.6.0",
+    "eslint": "9.6.0",
+    "eslint-config-escapace": "5.1.3",
     "esroll": "0.1.1",
-    "knip": "5.13.0",
-    "lefthook": "1.6.10",
-    "prettier": "3.2.5",
+    "knip": "5.23.3",
+    "lefthook": "1.6.18",
+    "prettier": "3.3.2",
     "prettier-config-escapace": "1.2.1",
-    "syncpack": "12.3.2",
-    "tsx": "4.9.1",
-    "typescript": "5.4.5",
-    "vitest": "1.5.2"
+    "syncpack": "12.3.3",
+    "tsx": "4.16.0",
+    "typescript": "5.5.3",
+    "vitest": "1.6.0"
   },
   "engines": {
-    "node": ">=20.12.0",
-    "pnpm": ">=9.0.6"
+    "node": ">=20.15.0",
+    "pnpm": ">=9.4.0"
   },
   "exports": {
     ".": {
@@ -74,10 +74,12 @@
   "repository": "escapace/willow",
   "scripts": {
     "build": "tsx scripts/build.ts",
-    "format": "eslint --no-warn-ignored --fix && prettier -uw .",
+    "format": "syncpack format && eslint --no-warn-ignored --fix && prettier -uw .",
     "lint": "ls-lint --config .ls-lint.yaml && knip && eslint",
+    "ls-lint": "ls-lint --config .ls-lint.yaml",
     "pack": "pnpm-pack package --pack-destination lib",
     "prepare": "lefthook install",
+    "syncpack": "syncpack fix-mismatches && syncpack-set-semver-ranges && syncpack format",
     "test": "vitest --no-watch --coverage",
     "typecheck": "tsc --noEmit"
   },
